<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".RegistrationPage">

    <View
        android:id="@+id/topBorder"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="#B0C4DE"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <View
        android:id="@+id/bottomBorder"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="#B0C4DE"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />


    <TextView
        android:id="@+id/textViewRegistration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:gravity="center"
        android:padding="4dp"
        android:text="@string/registration_head"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/icon"
        android:layout_width="91dp"
        android:layout_height="87dp"
        android:layout_marginTop="35dp"
        android:src="@drawable/todo_icon"
        app:layout_constraintTop_toBottomOf="@+id/textViewRegistration"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="160dp" />

    <TextView
        android:id="@+id/textViewEnterUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/enter_userName"
        android:textColor="#27374e"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/editTextEnterUser"
        app:layout_constraintEnd_toStartOf="@id/editTextEnterUser"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editTextEnterUser" />

    <EditText
        android:id="@+id/editTextEnterUser"
        android:layout_width="256dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/userName_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.978"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/icon" />

    <TextView
        android:id="@+id/textViewEmailLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/enter_email"
        android:textColor="#27374e"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/editTextEmail"
        app:layout_constraintEnd_toStartOf="@id/editTextEmail"
        app:layout_constraintHorizontal_bias="0.145"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/editTextEmail"
        app:layout_constraintVertical_bias="0.461" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="256dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/email_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@id/editTextEnterUser"
        app:layout_constraintTop_toBottomOf="@+id/editTextEnterUser" />

    <TextView
        android:id="@+id/textViewPasswordLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/enter_password"
        android:textColor="#27374e"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/editTextPassword"
        app:layout_constraintEnd_toStartOf="@id/editTextPassword"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="parent"
        android:background="#FFFFFF"
        app:layout_constraintTop_toTopOf="@id/editTextPassword" />


    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="257dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextEmail" />

    <CheckBox
        android:id="@+id/checkBoxNotifications"
        android:layout_width="229dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:background="#B0C4DE"
        android:padding="4dp"
        android:text="@string/notification_check"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextPassword" />

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/joinIn_button"
        android:textColor="#27374e"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxNotifications"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>