<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".UserHomePage">

    <View
        android:id="@+id/topBorder"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="#B0C4DE"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <View
        android:id="@+id/bottomBorder"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="#B0C4DE"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:text="User Aaa's TO-DO"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/icon"
        android:layout_width="91dp"
        android:layout_height="87dp"
        android:src="@drawable/todo_icon"
        app:layout_constraintBottom_toTopOf="@+id/recyclerView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitle"
        tools:ignore="MissingConstraints" />

    <!--
        <TextView
            android:id="@+id/textViewTask"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="30dp"
            android:layout_weight="1"
            android:background="#808080"
            android:gravity="left"
            android:padding="8dp"
            android:text="Task 1"
            android:textColor="#000000"
            app:layout_constraintEnd_toStartOf="@+id/checkBoxTask"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/icon" />

        <CheckBox
            android:id="@+id/checkBoxTask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="25dp"
            app:layout_constraintBottom_toBottomOf="@+id/textViewTask"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textViewTask" />-->

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="408dp"
        android:layout_height="362dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonAdd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/icon"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/buttonAdd"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="8dp"
        android:text="@string/addTask_button"
        android:textColor="#27374e"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/bottomBorder"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonEdit"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:text="@string/edit_button"
        android:textColor="#27374e"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/bottomBorder"
        app:layout_constraintEnd_toStartOf="@+id/buttonLogout"
        app:layout_constraintStart_toEndOf="@+id/buttonAdd" />

    <Button
        android:id="@+id/buttonLogout"
        android:layout_width="94dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:text="@string/logout_button"
        android:textColor="#27374e"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/buttonAdd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/buttonEdit"
        app:layout_constraintTop_toTopOf="@+id/buttonAdd"
        app:layout_constraintVertical_bias="0.0" />




</androidx.constraintlayout.widget.ConstraintLayout>
